# hackmaster

./: Main.hs  README.md  create_db.sh  events.db  hackmaster.cabal  hasweb.cabal  start.sh  todo.cabal
Models/: Event.hs
Views/: Index.hs
public/: index.html  main.js
public/js/: main.js
