name:                hackmaster
version:             0.0.1
synopsis:            Combat tracker for my hackmaster character
homepage:            https://github.com/theTrav/hackmaster
license:             MIT
author:              Travis Dixon
maintainer:          travis@dixon.net.au
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable hackmaster
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.7.*
                     , scotty
                     , text
                     , wai-middleware-static
                     , sqlite-simple
                     , aeson
                     , transformers
                     
